--- a/manifest.yaml
+++ b/manifest.yaml
@@ -1,18 +1,6 @@
-- folder: python-minimal
-  name: Basic Python (3.9) Project
-  description: The simplest Python-3.9-based renku project with a basic directory structure and necessary supporting files.
-  variables: {}
-- folder: R-minimal
-  name: Basic R (4.0.5) Project
-  description: The simplest R-4.0.5-based renku project with a basic directory structure and necessary supporting files.
-  variables: {}
-- folder: bioc-minimal
-  name: R-Bioconductor (3.12) Project
-  description: The simplest R bioconductor-3.12-based renku project with a basic directory structure and necessary supporting files.
-  variables: {}
-- folder: julia-minimal
-  name: Basic Julia (1.6.1) Project
-  description: The simplest Julia 1.6.1-based renku project with a basic directory structure and necessary supporting files.
+- folder: bioc-latest
+  name: R-Bioconductor (latest devel) Project
+  description: R/Bioconductor renku project with a basic directory structure and necessary supporting files.
   variables: {}
 - folder: minimal
   name: Minimal Renku
